<fixing but with auth user button on mobile screens>

--- a/src/styles/components/Auth.css
+++ b/src/styles/components/Auth.css
@@ -32,7 +32,7 @@ ul.access-buttons{
 	align-items: center;
 	top: 10px;
 	right: 10px;
-	padding: 10px 20px;
+	padding: 1rem 10rem;
 	color: var(--logoText); 
 	border: none;
 	border-radius: 5px;
@@ -57,4 +57,20 @@ ul.access-buttons{
 
 .auth-buttons:hover {
 	background-color: #00acee; 
+}
+
+@media screen and (max-width: 600px) {
+
+	.logged-user {
+		padding: 0.5rem 0.5rem 0 0  ;
+	}
+
+	.logged-as{
+		padding: 1rem;
+	}
+
+	.loggout-button{
+		margin: 0 2rem 4rem 0;
+	}
+
 }
