--- a/src/styles/components/NavigationBar.css
+++ b/src/styles/components/NavigationBar.css
@@ -13,7 +13,6 @@
   height: 3rem;
   bottom: 0;
   margin-top: auto;
-  position: fixed;
   font-size: 10px;
   font-weight: 800;
   color: var(--logoText);
